@@ -1,11 +1,11 @@
 [Desktop Entry]
 Name=GnomeBaker
-Comment=GnomeBaker
-GenericName=CD Writer
+Comment=GnomeBaker CD/DVD Writer
+GenericName=CD/DVD Writer
 Exec=gnomebaker
 Icon=@PACKAGE_PIXMAPS_DIR@/gnomebaker-48.png
 Terminal=false
 MultipleArgs=false
 Type=Application
-Categories=Application;Utility;
+Categories=Application;AudioVideo;DiscBurning;
 StartupNotify=true
